public class Property extends Field {

    private Player owner;
    private int seriesID;
    private boolean isMonopolized;
    
}
